# yobmef

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: eval.rs
scripts/: bitboard.py  yobtest.sh
src/: analyze.rs  bitboard.rs  chess.rs  engine.rs  eval.rs  lib.rs  main.rs  movegen.rs  search.rs  uci.rs  zobrist.rs
src/chess/: board.rs  castling_side.rs  color.rs  mod.rs  movement.rs  piece.rs  square.rs
src/movegen/: helpers.rs  king.rs  knight.rs  magic.rs  magic_utils.rs  mod.rs  pawn.rs  rook.rs
tests/: perft_test.rs  searcher_test.rs
