[package]
name = "yobmef"
version = "0.1.0"
authors = ["Felix <felix.mattick@gmail.com>", "Ulisse Mini <ulisse.mini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "yobmef"

[dependencies]
rand = "^0.8.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "eval"
harness = false

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 3
